--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -36,7 +36,7 @@
 										<!--******************* 사진 *******************-->
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper1">
-												<img id="pFIle" name="pFIle" alt="" >
+												<img id="pFIle" name="pFIle" alt="" th:src="@{/personnel/showImg/{id}(id=${personnel.empId})}"/>
 											</div>
 										</td>
 										<!-- 이름 -->
