--- a/bootstrap_stater/src/main/resources/templates/login.html
+++ b/bootstrap_stater/src/main/resources/templates/login.html
@@ -51,7 +51,8 @@
 											th:value="${_csrf.token}" />
 										<div class="form-group">
 											<input type="text" class="form-control form-control-user"
-												name="empId" placeholder="사원번호를 입력하세요">
+												th:value="${rememberId}" required name="empId"
+												placeholder="사원번호를 입력하세요">
 										</div>
 										<div class="form-group">
 											<input type="password" class="form-control form-control-user"
@@ -60,7 +61,8 @@
 										</div>
 										<div class="form-check">
 											<input type="checkbox" class="form-check-input"
-												id="rememberMe" name="remember-id"> <label
+												id="rememberMe" name="remember-id"
+												th:checked="${rememberChecked}"> <label
 												class="form-check-label" for="rememberMe">사원번호 기억하기</label>
 										</div>
 										<button type="submit"
