--- a/erp_mes/src/main/resources/templates/main.html
+++ b/erp_mes/src/main/resources/templates/main.html
@@ -60,11 +60,21 @@
 						<div class="card-body">
 							<div class="d-flex align-items-center">
 								<div class="mr-3">
-									<i class="fas fa-user-circle fa-4x text-gray-300"></i>
+										<img 
+											class="img-profile rounded-circle" 
+											style="width:70px; height:70px;"
+										 	th:src="@{/personnel/loginShowImg/{id}(id=${#authentication.principal.empId})}">
+										
 								</div>
 								<div>
-									<div class="text-gray-800 font-weight-bold">인사팀
-										2025020007</div>
+									<div class="text-gray-800 font-weight-bold">
+									<th:block 
+										th:text="${#authentication.principal.empDeptName}">
+									</th:block>
+									<th:block 
+										th:text="${#authentication.principal.empId}">
+									</th:block>
+									</div>
 									<div class="small text-gray-500"
 										sec:authorize="isAuthenticated()">
 										<span class="mr-2 d-none d-lg-inline text-gray-600 "
