--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -154,7 +154,7 @@
 					aria-labelledby="headingPages" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">기준정보관리:</h6>
-						<a class="collapse-item" th:href="@{/notice}">품질정보</a>
+						<a class="collapse-item" th:href="@{/quality}">품질정보</a>
 
 					</div>
 				</div></li>
